// Copyright (c) 2020 The Open-Transactions developers
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTClaim";
option optimize_for = LITE_RUNTIME;

message Claim {
    optional uint32 version = 1;
    optional string nymID = 2;
    optional uint32 section = 3;
    optional uint32 type = 4;
    optional sint64 start = 5;
    optional sint64 end = 6;
    optional string value = 7;
    optional string subtype = 8;
}
